components/spi/oauth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: service-provider-integration-oauth
    app.kubernetes.io/version: 0.2.0
  name: service-provider-integration-oauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: service-provider-integration-oauth
      app.kubernetes.io/version: 0.2.0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: service-provider-integration-oauth
        app.kubernetes.io/version: 0.2.0
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/redhat-appstudio/service-provider-integration-oauth@sha256:137af3b33fa2e6487c9c3c6eff077f8e055dad5a8e6698f03d3445a5ae35eaaa
          imagePullPolicy: Always
          volumeMounts:
          - name: config
            mountPath: "/etc/spi"
            readOnly: true
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: service-provider-integration-oauth
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ready
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 64Mi
      volumes:
      - name: config
        secret:
          secretName: spi-oauth-config
